# personal_blog

./: .gitignore  Cargo.toml
Articles/: index.json
Users/: session.json  users.json
html/: add_article.html  article.html  article_update.html  dashboard.html  failed_login.html  index.html  login.html  page_not_found.html
src/: error.rs  html.rs  http.rs  main.rs  request.rs  utils.rs
src/articles/: artciles.rs  article.rs  articles.rs  mod.rs
src/html_elements/: buttons.rs
src/request/: authed.rs  body.rs  header.rs  mod.rs
src/route/: article.rs  dashboard.rs  favicon.rs  home.rs  login.rs  mod.rs  new.rs  not_found.rs
src/route/article_routes/: article.rs  mod.rs  new.rs  remove.rs  update_article.rs
src/route/user/: login.rs  logout.rs
src/session/: mod.rs  session.rs  store.rs
src/users/: authenticate.rs  mod.rs  role.rs  userinfo.rs
