[package]
name = "personal_blog"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = { version = "1.13.1", features = ["unstable"] }
chrono = "0.4.41"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tera = "1.20.0"
thiserror = "2.0.12"
uuid = { version = "1.17.0", features = ["v4"] }
